Create booking with DB check on concistency
