# main.go
@@ -8,6 +8,7 @@ import (
 	"encoding/json"
 	"fmt"
 	"log"
+	"math/rand"
 	"net/http"
 	"time"
 
@@ -48,6 +49,26 @@ type FlightSchedule struct {
 	OriginAirport string `json:"origin_airport"`
 }
 
+type BookingRequest struct {
+	Passanger      string `json:"passanger"`
+	FareConditions string `json:"fare_conditions"`
+	FlightIDs      []uint `json:"flight_ids"`
+}
+
+type Book struct {
+	GUID           string `gorm:"column:guid;primaryKey" json:"guid"`
+	FlightID       uint   `gorm:"column:flight_id" json:"flight_id"`
+	FareConditions string `gorm:"column:fare_conditions" json:"fare_conditions"`
+	TicketNo       string `gorm:"column:ticket_no" json:"ticket_no"`
+	Passanger      string `gorm:"column:passanger" json:"passanger"`
+}
+
+type TicketFlight struct {
+	TicketNo       string `gorm:"column:ticket_no;primaryKey" json:"ticket_no"`
+	FlightID       uint   `gorm:"column:flight_id" json:"flight_id"`
+	FareConditions string `gorm:"column:fare_conditions" json:"fare_conditions"`
+}
+
 var db *gorm.DB
 
 func enableCORS(next http.Handler) http.Handler {
@@ -63,6 +84,15 @@ func enableCORS(next http.Handler) http.Handler {
 
 		next.ServeHTTP(w, r)
 	})
+}
+
+func generateTicketNo() string {
+	const charset = "ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
+	b := make([]byte, 13)
+	for i := range b {
+		b[i] = charset[rand.Intn(len(charset))]
+	}
+	return string(b)
 }
 
 // @Summary Get all cities
@@ -120,7 +150,7 @@ func getAirports(w http.ResponseWriter, r *http.Request) {
 // @Success 200 {array} FlightSchedule
 // @Failure 400 {string} ErrorResponse "Missing or invalid airport code"
 // @Failure 500 {object} map[string]string
-// @Router /airports/inbound-schedule/{airport_code} [get]
+// @Router /airports/{airport_code}/inbound-schedule [get]
 func getInboundScheduleAirport(w http.ResponseWriter, r *http.Request) {
 	airportCode := chi.URLParam(r, "airport_code")
 	if airportCode == "" {
@@ -158,7 +188,7 @@ func getInboundScheduleAirport(w http.ResponseWriter, r *http.Request) {
 // @Success 200 {array} FlightSchedule
 // @Failure 400 {string} ErrorResponse "Missing or invalid airport code"
 // @Failure 500 {object} map[string]string
-// @Router /airports/outbound-schedule/{airport_code} [get]
+// @Router /airports/{airport_code}/outbound-schedule [get]
 func getOutboundScheduleAirport(w http.ResponseWriter, r *http.Request) {
 	airportCode := chi.URLParam(r, "airport_code")
 	if airportCode == "" {
@@ -188,6 +218,91 @@ func getOutboundScheduleAirport(w http.ResponseWriter, r *http.Request) {
 	json.NewEncoder(w).Encode(schedules)
 }
 
+// @Summary Book a route
+// @Description Idempotent booking of flights with a GUID
+// @Tags bookings
+// @Accept json
+// @Produce json
+// @Param guid path string true "GUID"
+// @Param booking body BookingRequest true "Booking data"
+// @Success 200 {array} TicketFlight "Existing or new tickets"
+// @Failure 400 {string}  map[string]string
+// @Failure 500 {string}  map[string]string
+// @Router /bookings/{guid} [put]
+func bookRoute(w http.ResponseWriter, r *http.Request) {
+	defer r.Body.Close()
+	guid := chi.URLParam(r, "guid")
+	if guid == "" {
+		http.Error(w, "Missing guid parameter", http.StatusBadRequest)
+		return
+	}
+	var req BookingRequest
+	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
+		http.Error(w, "Failed to decode input", http.StatusBadRequest)
+		return
+	}
+
+	validClasses := map[string]bool{"Economy": true, "Comfort": true, "Business": true, "EconomySec": true}
+	if !validClasses[req.FareConditions] {
+		http.Error(w, "Invalid fare condition. Must be 'Economy', 'Comfort', 'Business', or 'EconomySec'", http.StatusBadRequest)
+		return
+	}
+
+	var tickets []TicketFlight
+	err := db.Transaction(func(tx *gorm.DB) error {
+		var existingBooks []Book
+		if err := tx.Where("guid = ?", guid).Find(&existingBooks).Error; err != nil {
+			return err
+		}
+
+		if len(existingBooks) > 0 {
+			var ticketNos []string
+			for _, book := range existingBooks {
+				ticketNos = append(ticketNos, book.TicketNo)
+			}
+			if err := tx.Where("ticket_no IN ?", ticketNos).Find(&tickets).Error; err != nil {
+				return err
+			}
+			return nil
+		}
+
+		for _, flightID := range req.FlightIDs {
+			ticketNo := generateTicketNo()
+			book := Book{
+				GUID:           guid,
+				FlightID:       flightID,
+				FareConditions: req.FareConditions,
+				TicketNo:       ticketNo,
+				Passanger:      req.Passanger,
+			}
+			ticketFlight := TicketFlight{
+				TicketNo:       ticketNo,
+				FlightID:       flightID,
+				FareConditions: req.FareConditions,
+			}
+
+			if err := tx.Create(&book).Error; err != nil {
+				return err
+			}
+			if err := tx.Create(&ticketFlight).Error; err != nil {
+				return err
+			}
+			tickets = append(tickets, ticketFlight)
+		}
+
+		return nil
+	})
+
+	if err != nil {
+		http.Error(w, "Failed to process booking in DB", http.StatusInternalServerError)
+		return
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusOK)
+	json.NewEncoder(w).Encode(tickets)
+}
+
 func main() {
 	config, err := LoadConfig()
 	if err != nil {
@@ -204,9 +319,10 @@ func main() {
 	r.Use(middleware.Logger)
 
 	r.Get("/airports", getAirports)
-	r.Get("/airports/inbound-schedule/{airport_code}", getInboundScheduleAirport)
-	r.Get("/airports/outbound-schedule/{airport_code}", getOutboundScheduleAirport)
+	r.Get("/airports/{airport_code}/inbound-schedule", getInboundScheduleAirport)
+	r.Get("/airports/{airport_code}/outbound-schedule", getOutboundScheduleAirport)
 	r.Get("/cities", getCities)
+	r.Put("/bookings/{guid}", bookRoute)
 	r.Get("/swagger/*", httpSwagger.Handler(httpSwagger.URL("/swagger/doc.json")))
 
 	fmt.Printf("Listening on http://%s/swagger/\n", config.ListenAddr)
